# lxc

./: 0001-fixing-PKG_CHECK_MODULES-to-work-with-python-3.4-on-.patch  0002-replaced-she-bangs-containing-usr-bin-python3-with-t.patch  README.SUSE  configure.ac  lxc-createconfig.in  lxc.spec.in
config/apparmor/: lxc-generate-aa-rules.py
config/apparmor/abstractions/: container-base  container-base.in  start-container
config/init/sysvinit/: Makefile.am  lxc.in
config/templates/: debian.common.conf.in
config/yum/: lxc-patch.py
doc/: lxc-create.sgml.in  lxc.container.conf.sgml.in
src/lxc/: cgfs.c  cgmanager.c  conf.c  lxc-device  lxc-ls.in  lxc-start-ephemeral.in  lxc_attach.c  utils.c  utils.h
src/lxc/tools/: lxc-start-ephemeral.in
src/python-lxc/: setup.py  setup.py.in
src/python-lxc/examples/: api_test.py  pyconsole-vte.py  pyconsole.py
src/tests/: Makefile.am  lxc-test-symlink
templates/: lxc-debian.in  lxc-opensuse.in
